Fix problem overflow screen view and hot air balloon position

--- a/hot_air_balloon/style.css
+++ b/hot_air_balloon/style.css
@@ -6,15 +6,15 @@ html{
 
 body{
     margin: 0px;
+    overflow: hidden;
 }
 
 #main_svg{
     /* border: 2px black solid; */
     margin: 0px;
-    /* width: calc(100vw-10px);
-    height: calc(100vh-20px); */
-    width: 100vw;
-    height: 100vh;
+    padding: 0px;
+    /* width: 100vw;
+    height: 100vh; */
     background-image:url('images/pexels-max-andrey-1254736.jpg');
     background-size: cover;
 }
